--- a/Tariff Classification.ipynb
+++ b/Tariff Classification.ipynb
@@ -549,6 +549,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ColorQube 8570/8580 Black Solid Ink Pack (4 Sticks)\\nCompatible Products\\nColorQube 8570\\n,\\nColorQube 8580\\nAvailability\\nIn Stock\\nCapacity/Yield\\n8,600 pages\\nShipping Dimensions (LxWxH)\\n4.56\" x 4.44\" x 1.75\"\\nShipping Weight\\n1 lb\\nUPC Code\\n095205761207\\nRelated Products\\n108R00926&nbsp;-&nbsp;ColorQube 8570/8580 Cyan Solid Ink Pack (2 Sticks)\\n108R00927&nbsp;-&nbsp;ColorQube 8570/8580 Magenta Solid Ink Pack (2 Sticks)\\n108R00928&nbsp;-&nbsp;ColorQube 8570/8580 Yellow Solid Ink Pack (2 Sticks)\\n108R00929&nbsp;-&nbsp;ColorQube 8570/8580 Black Solid Ink Pack (2 Sticks)\\n\\r\\nThese genuine Xerox black solid ink sticks are specially formulated for your ColorQube 8570/8580 to produce sharp text and vibrant, accurate colors, print after print. Match genuine Xerox supplies with your equipment to always get the best results. Donâ€™t settle for cheap imitations. The 108R00930 solid ink pack yields approximately 8,600 pages. Get free standard shipping on all supplies.\\n']"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df_Xerox['Desc'][400:401])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3215111000]"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(df_Xerox['Classification'][400:401])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -993,6 +1033,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Check the class imbalance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8443992550    463\n",
+       "8443992050    286\n",
+       "3215191000     27\n",
+       "8443310000     22\n",
+       "8443321030     21\n",
+       "8443992510     18\n",
+       "3215111000     14\n",
+       "8443321010     11\n",
+       "8443992010      8\n",
+       "8471704065      7\n",
+       "8471801000      5\n",
+       "8523520090      4\n",
+       "8471609050      3\n",
+       "8523510000      2\n",
+       "4911998000      2\n",
+       "9403100040      2\n",
+       "8471706000      2\n",
+       "8544422000      1\n",
+       "3926909996      1\n",
+       "9403200090      1\n",
+       "8421398015      1\n",
+       "9027304040      1\n",
+       "7320205020      1\n",
+       "8531809051      1\n",
+       "8471900000      1\n",
+       "8544429090      1\n",
+       "Name: Classification, dtype: int64"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_Xerox['Classification'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Split the classification for take first 4 digit value "
    ]
   },
@@ -1095,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1130,6 +1223,7 @@
        "      <th>SKUNumberCompanyDifferentFromExcel</th>\n",
        "      <th>Desc</th>\n",
        "      <th>Classi</th>\n",
+       "      <th>Class_6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1146,6 +1240,7 @@
        "      <td>NaN</td>\n",
        "      <td>Phaser 7800 Professional Finisher (2,000-Sheet...</td>\n",
        "      <td>8443</td>\n",
+       "      <td>844399</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1160,6 +1255,7 @@
        "      <td>NaN</td>\n",
        "      <td>Phaser 5500/5550 Finisher (3,500-Sheet)\\nCompa...</td>\n",
        "      <td>8443</td>\n",
+       "      <td>844399</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1174,6 +1270,7 @@
        "      <td>NaN</td>\n",
        "      <td>Phaser 5500/5550 Stacker (3,500-Sheet)\\nCompat...</td>\n",
        "      <td>8443</td>\n",
+       "      <td>844399</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1200,39 +1297,19 @@
        "1                                 NaN   \n",
        "2                                 NaN   \n",
        "\n",
-       "                                                Desc  Classi  \n",
-       "0  Phaser 7800 Professional Finisher (2,000-Sheet...    8443  \n",
-       "1  Phaser 5500/5550 Finisher (3,500-Sheet)\\nCompa...    8443  \n",
-       "2  Phaser 5500/5550 Stacker (3,500-Sheet)\\nCompat...    8443  "
+       "                                                Desc  Classi  Class_6  \n",
+       "0  Phaser 7800 Professional Finisher (2,000-Sheet...    8443   844399  \n",
+       "1  Phaser 5500/5550 Finisher (3,500-Sheet)\\nCompa...    8443   844399  \n",
+       "2  Phaser 5500/5550 Stacker (3,500-Sheet)\\nCompat...    8443   844399  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_Xerox.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(906, 2)"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
    ]
   },
   {
@@ -1674,6 +1751,227 @@
    ],
    "source": [
     "print(classification_report(y_val,pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now use 6 digit code for y variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Split the dataset\n",
+    "X = df_Xerox['Desc']\n",
+    "y = df_Xerox['Class_6'] # 6 digit code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Train / Test Split - Blind set\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.1,random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Train / Test Split - Validation set\n",
+    "X_train,X_val,y_train,y_val = train_test_split(X_train,y_train,test_size=0.2,random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Calculate Tfidf vector\n",
+    "tfidf_bow = tfidf_vect.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Fit the model\n",
+    "mnb.fit(tfidf_bow,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[844399]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mnb.predict(tfidf_vect.transform(['WorkCentre 4265 Universal Fax Kit\\nCompatible Products\\nWorkCentre 4265\\nAvailability\\nShips  11-13  days\\nCapacity/Yield\\nn/a\\nShipping Dimensions (LxWxH)\\n6.6\" x 8.7\" x 2.5\"\\nShipping Weight\\n1 lb\\nUPC Code\\n095205862096\\n\\r\\nUniversal fax kit for the WorkCentre 4265.\\n'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[844399]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mnb.predict(tfidf_vect.transform(['Phaser 7800 Professional Finisher (2,000-Sheet)\\nCompatible Products\\nPhaser 7800\\nAvailability\\nShips  1-3  days\\nCapacity/Yield\\n1,500 sheets\\nShipping Dimensions (LxWxH)\\n30.1\"x45.7\"x48.9\"\\nShipping Weight\\n253 lb\\nUPC Code\\n 095205765397\\n\\r\\nThis finisher/stapler/booklet maker for your Phaser 7800 has a 1,500-sheet main stacker and 500-sheet top tray. It offers a 50-sheet multiposition stapler, hole punch, saddle-stitch booklet maker, and V-fold.\\n'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[844399]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mnb.predict(tfidf_vect.transform(['ColorQube 8570/8580 Black Solid Ink Pack (4 Sticks)\\nCompatible Products\\nColorQube 8570\\n,\\nColorQube 8580\\nAvailability\\nIn Stock\\nCapacity/Yield\\n8,600 pages\\nShipping Dimensions (LxWxH)\\n4.56\" x 4.44\" x 1.75\"\\nShipping Weight\\n1 lb\\nUPC Code\\n095205761207\\nRelated Products\\n108R00926&nbsp;-&nbsp;ColorQube 8570/8580 Cyan Solid Ink Pack (2 Sticks)\\n108R00927&nbsp;-&nbsp;ColorQube 8570/8580 Magenta Solid Ink Pack (2 Sticks)\\n108R00928&nbsp;-&nbsp;ColorQube 8570/8580 Yellow Solid Ink Pack (2 Sticks)\\n108R00929&nbsp;-&nbsp;ColorQube 8570/8580 Black Solid Ink Pack (2 Sticks)\\n\\r\\nThese genuine Xerox black solid ink sticks are specially formulated for your ColorQube 8570/8580 to produce sharp text and vibrant, accurate colors, print after print. Match genuine Xerox supplies with your equipment to always get the best results. Donâ€™t settle for cheap imitations. The 108R00930 solid ink pack yields approximately 8,600 pages. Get free standard shipping on all supplies.\\n'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pred_6 = mnb.predict(tfidf_vect.transform(X_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "     321511       0.00      0.00      0.00         2\n",
+      "     321519       0.00      0.00      0.00         8\n",
+      "     844331       0.00      0.00      0.00         2\n",
+      "     844332       0.50      1.00      0.67         2\n",
+      "     844399       0.89      1.00      0.94       141\n",
+      "     847170       0.00      0.00      0.00         5\n",
+      "     852352       0.00      0.00      0.00         1\n",
+      "     902730       0.00      0.00      0.00         1\n",
+      "     940320       0.00      0.00      0.00         1\n",
+      "\n",
+      "avg / total       0.77      0.88      0.82       163\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rajam\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1113: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_val,pred_6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Now use 10 digit code for y variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Split the dataset\n",
+    "X=df_Xerox['Desc']\n",
+    "y=df_Xerox['Classification'] # 10 digit code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Train / Test Split - Blind set\n",
+    "X_train,X_test,y_train,y_val = train_test_split(X,y,test_size=0.1,random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Validation set\n",
+    "X_train,X_val,y_train,y_val = train_test_split(X_train,y_train,test_size=0.2,random_state=101)"
    ]
   },
   {
